[skip render] add auditing to makefile

--- a/back/Makefile
+++ b/back/Makefile
@@ -8,3 +8,16 @@ help:
 .PHONY: run/api
 run/api:
 	go run ./cmd/api
+
+## audit: tidy dependencies and format, vet and test all code
+.PHONY: audit
+audit:
+	@echo 'Tidying and verifying module dependencies...' go mod tidy
+	go mod verify
+	@echo 'Formatting code...'
+	go fmt ./...
+	@echo 'Vetting code...'
+	go vet ./...
+	staticcheck ./...
+	@echo 'Running tests...'
+	go test -race -vet=off ./...
