--- a/front/textcare/package.json
+++ b/front/textcare/package.json
@@ -12,7 +12,9 @@
     "@tanstack/react-query": "^5.64.1",
     "next": "15.1.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
