--- a/front/textcare/package.json
+++ b/front/textcare/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.64.1",
     "next": "15.1.5",
     "react": "^19.0.0",
