--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -8,10 +8,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api {
-        proxy_pass http://api:4000;
+    location /api/ {
+        proxy_pass http://api:4000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
