--- a/infrastructure/docker/compose/docker-compose.prod.yml
+++ b/infrastructure/docker/compose/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ../nginx/nginx-prod.conf:/etc/nginx/nginx.conf:ro
+      - /home/ec2-user/app/textCare/infrastructure/nginx/nginx-prod.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - frontend
